update remesh notebook

--- a/examples/remesh.ipynb
+++ b/examples/remesh.ipynb
@@ -157,18 +157,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f460f733",
+   "id": "44af0247",
    "metadata": {},
    "source": [
-    "## Meridian Extract"
+    "----"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c56bb081",
+   "id": "277d08de",
    "metadata": {},
    "source": [
-    "In order to support planar projections, we need the ability to determine where to **rip**, or **create a seam** in the mesh at the required **anti-meridian** of the **central longitude** of the chosen projection."
+    "## The (Anti)-Meridian Problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d1b9ae3",
+   "metadata": {},
+   "source": [
+    "When we create a planar projection we require to choose a **central longitude** for the projection, which in turn defines where the **anti-meridian** edge of the projection will be.\n",
+    "\n",
+    "Depending on the mesh being projected, there may be meridians that conveniently don't intersect any mesh cells faces. However, typically there are many meridians pass through mesh cell faces, as well see."
    ]
   },
   {
@@ -176,7 +186,7 @@
    "id": "d1b2444e",
    "metadata": {},
    "source": [
-    "First, create some points-of-interest (POI) to help orientate us on the mesh..."
+    "First, create some **points-of-interest** (POI) to help orientate us on the mesh..."
    ]
   },
   {
@@ -190,6 +200,81 @@
     "\n",
     "poi = to_xyz([0, 0, 0, 90, -180, -90], [90, -90, 0, 0, 0, 0])\n",
     "poles = to_xyz([0, 0], [90, -90])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b91451b",
+   "metadata": {},
+   "source": [
+    "Now, load an example LFRic unstructured mesh..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a2595bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "umesh = load_lfric(data=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "696dfcba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import geovista.geodesic\n",
+    "\n",
+    "meridian = -180\n",
+    "lons, lats = [0, meridian, 0], [90, 0, -90]\n",
+    "line = geovista.geodesic.line(lons, lats)\n",
+    "\n",
+    "plotter = gv.GeoPlotter()\n",
+    "plotter.add_coastlines()\n",
+    "\n",
+    "plotter.add_mesh(line, color=\"red\", line_width=5)\n",
+    "plotter.add_mesh(umesh, cmap=\"balance\", color=\"grey\", show_edges=True)\n",
+    "\n",
+    "plotter.add_points(poi, color=\"blue\", render_points_as_spheres=True, point_size=10)\n",
+    "plotter.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89d4434b",
+   "metadata": {},
+   "source": [
+    "We can solve this problem by taking **two steps**:\n",
+    "1. **Extracting** the whole mesh cells touching the meridian and the cells being intersected by the meridian\n",
+    "1. Splitting the mesh cells being intersected by the meridian; this is called **remeshing** "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "748397e8",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f460f733",
+   "metadata": {},
+   "source": [
+    "## Step 1: Meridian Extract"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c56bb081",
+   "metadata": {},
+   "source": [
+    "In order to support planar projections, we need the ability to determine where to **rip**, or **create a seam** in the mesh at the required **anti-meridian** of the **central longitude** of the chosen projection."
    ]
   },
   {
@@ -257,7 +342,7 @@
     "\n",
     "plotter = gv.GeoPlotter()\n",
     "\n",
-    "plotter.add_base_layer(color=\"grey\")\n",
+    "#plotter.add_base_layer(color=\"grey\")\n",
     "plotter.add_coastlines()\n",
     "\n",
     "if mesh_split.n_cells:\n",
@@ -284,7 +369,7 @@
    "id": "176ebdaf",
    "metadata": {},
    "source": [
-    "## Remeshing"
+    "## Step 2: Remeshing"
    ]
   },
   {
@@ -304,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "umesh = load_lfric(data=False)"
+    "#umesh = load_lfric(data=False)"
    ]
   },
   {
@@ -342,7 +427,7 @@
    "id": "3204fef8",
    "metadata": {},
    "source": [
-    "This remeshing tequnique requires a `PolyData` mesh and a `PolyData` plane to determine the points of intersection for remeshing.\n",
+    "This remeshing tequnique requires a `PolyData` **mesh** and a `PolyData` **plane** to determine the points of intersection for remeshing.\n",
     "\n",
     "First, let's create a `PolyData` plane for the meridian..."
    ]
@@ -375,8 +460,8 @@
    "source": [
     "plotter = gv.GeoPlotter()\n",
     "\n",
-    "plotter.add_mesh(plane, show_edges=True, opacity=1.0)\n",
-    "#plotter.add_mesh(umesh, cmap=\"balance\", show_edges=False)\n",
+    "plotter.add_mesh(plane, show_edges=True, opacity=0.5)\n",
+    "#plotter.add_mesh(umesh, cmap=\"balance\", show_edges=True)\n",
     "\n",
     "plotter.add_coastlines()\n",
     "plotter.add_axes()\n",
@@ -408,7 +493,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mesh_split = cast(mesh_split)"
+    "#mesh_split = cast(mesh_split)"
    ]
   },
   {
@@ -418,7 +503,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mesh_split"
+    "#mesh_split"
    ]
   },
   {
@@ -438,7 +523,7 @@
    "source": [
     "plotter = gv.GeoPlotter()\n",
     "\n",
-    "#plotter.add_mesh(plane, show_edges=True, opacity=0.5)\n",
+    "plotter.add_mesh(plane, show_edges=True, opacity=0.5)\n",
     "plotter.add_mesh(mesh_split, show_edges=True)\n",
     "\n",
     "plotter.add_points(poles, color=\"blue\", render_points_as_spheres=True, point_size=10)\n",
@@ -485,7 +570,7 @@
    "id": "280b8dec",
    "metadata": {},
    "source": [
-    "The intersection mesh contains various useful index information from the **vtkIntersectionPolyDataFilter**..."
+    "The **intersection** mesh contains various useful index information from the **vtkIntersectionPolyDataFilter**..."
    ]
   },
   {
@@ -503,7 +588,7 @@
    "id": "cb8082c9",
    "metadata": {},
    "source": [
-    "Let's see the triangulated input mesh passed to the **vtkIntersectionPolyDataFilter**..."
+    "Let's see the **triangulated** input mesh passed to the **vtkIntersectionPolyDataFilter**..."
    ]
   },
   {
@@ -560,16 +645,150 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2e2c057",
+   "id": "d446b7a6",
    "metadata": {},
    "source": [
-    "## CRS"
+    "## Optimising the Workflow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb8144e9",
+   "metadata": {},
+   "source": [
+    "Depending on your workflow, you may perform several necessary analytical steps on your mesh that are **computationally expensive**. This is an **overhead** that seems unavoidable.\n",
+    "\n",
+    "Or is it?\n",
+    "\n",
+    "If you have a workflow with **known data-streams** e.g., an operational production suite, then it is possible to **optimise the workflow** with **pre-cached** or **archived** meshes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12923004",
+   "metadata": {},
+   "source": [
+    "For example, let's create the `umesh_slow` mesh, which for arguments sake represents the result of several computationally expensive operations."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c763540a",
+   "id": "3aa49f56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "umesh_slow = load_lfric(data=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab4c6f90",
+   "metadata": {},
+   "source": [
+    "Let's see that it looks like..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe2dbf06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "umesh_slow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba757971",
+   "metadata": {},
+   "source": [
+    "We can simply leverage the optimised `.vtk` binary format to **save** our mesh and then reload it.\n",
+    "\n",
+    "Note that, `pyvista` supports many industry recognised formats, see the [pyvista.read](https://docs.pyvista.org/api/utilities/_autosummary/pyvista.read.html) documentation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2192892",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname = \"mymesh.vtk\"\n",
+    "\n",
+    "umesh_slow.save(fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b34b5be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls -l mymesh.vtk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dfb6758c",
+   "metadata": {},
+   "source": [
+    "Now load the mesh and inspect it..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "974ca5c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "umesh_fast = pv.read(fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79231270",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "umesh_fast"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19667f1e",
+   "metadata": {},
+   "source": [
+    "And finally, plot the mesh..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45728dd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "umesh_fast.plot(cmap=\"balance\", show_edges=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a3a6126",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ceb34bc",
    "metadata": {},
    "outputs": [],
    "source": []
