rework meridian slice and remeshing

--- a/examples/remesh.ipynb
+++ b/examples/remesh.ipynb
@@ -156,6 +156,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d350c1ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_lam(data=False):\n",
+    "    fname = \"./lam.nc\"\n",
+    "    with PARSE_UGRID_ON_LOAD.context():\n",
+    "        cube = iris.load_cube(fname, \"air_potential_temperature\")[0]\n",
+    "\n",
+    "    data = cube.data if data else None\n",
+    "        \n",
+    "    face_node = cube.mesh.face_node_connectivity\n",
+    "    indices = face_node.indices_by_location()\n",
+    "    lons, lats = cube.mesh.node_coords\n",
+    "\n",
+    "    mesh = gv.Transform.from_unstructured(\n",
+    "        lons.points,\n",
+    "        lats.points,\n",
+    "        indices,\n",
+    "        data=data,\n",
+    "        start_index=face_node.start_index,\n",
+    "        name=cube.name(),\n",
+    "    )\n",
+    "\n",
+    "    if data is None:\n",
+    "        mesh.active_scalars_name = None\n",
+    "    \n",
+    "    return mesh"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "44af0247",
    "metadata": {},
@@ -217,7 +250,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "umesh = load_lfric(data=False)"
+    "umesh = load_lfric(data=True)\n",
+    "umesh.rotate_z(0.5, inplace=True)"
    ]
   },
   {
@@ -229,15 +263,17 @@
    "source": [
     "import geovista.geodesic\n",
     "\n",
-    "meridian = -180\n",
+    "meridian = 180.0\n",
     "lons, lats = [0, meridian, 0], [90, 0, -90]\n",
     "line = geovista.geodesic.line(lons, lats)\n",
+    "am = geovista.geodesic.line([0, -180, 0], [90, 0, -90])\n",
     "\n",
     "plotter = gv.GeoPlotter()\n",
-    "plotter.add_coastlines()\n",
+    "plotter.add_coastlines(\"10m\")\n",
     "\n",
-    "plotter.add_mesh(line, color=\"red\", line_width=5)\n",
-    "plotter.add_mesh(umesh, cmap=\"balance\", color=\"grey\", show_edges=True)\n",
+    "plotter.add_mesh(line, color=\"orange\", line_width=5)\n",
+    "plotter.add_mesh(am, color=\"red\", line_width=5)\n",
+    "plotter.add_mesh(umesh, cmap=\"balance\", show_edges=True)\n",
     "\n",
     "plotter.add_points(poi, color=\"blue\", render_points_as_spheres=True, point_size=10)\n",
     "plotter.show()"
@@ -278,24 +314,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "a83257e0",
-   "metadata": {},
-   "source": [
-    "Now, load a mesh..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ed604fa3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "umesh = load_lfric(data=False)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "94eb2b3c",
@@ -308,32 +326,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1a20e4c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plotter = gv.GeoPlotter()\n",
-    "\n",
-    "plotter.add_mesh(umesh, cmap=\"balance\", show_edges=True)\n",
-    "plotter.add_coastlines()\n",
-    "#plotter.add_base_layer(color=\"grey\")\n",
-    "\n",
-    "plotter.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "2c2cf3ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from geovista.core import Slicer, logger\n",
+    "from geovista.core import MeridianSlice, logger\n",
     "\n",
-    "logger.setLevel(\"INFO\")\n",
-    "meridian = 45\n",
+    "logger.setLevel(\"DEBUG\")\n",
+    "meridian = 180.0\n",
+    "lons, lats = [0, meridian, 0], [90, 0, -90]\n",
+    "line = gv.geodesic.line(lons, lats)\n",
     "\n",
-    "slicer = Slicer(umesh, meridian)\n",
+    "slicer = MeridianSlice(umesh, meridian)\n",
     "\n",
     "bias = \"west\"\n",
     "clip = True\n",
@@ -343,14 +347,18 @@
     "plotter = gv.GeoPlotter()\n",
     "\n",
     "#plotter.add_base_layer(color=\"grey\")\n",
-    "plotter.add_coastlines()\n",
+    "plotter.add_coastlines(\"10m\")\n",
     "\n",
     "if mesh_split.n_cells:\n",
     "    plotter.add_mesh(mesh_split, show_edges=True, color=\"pink\")\n",
     "if mesh_whole.n_cells:\n",
     "    plotter.add_mesh(mesh_whole, show_edges=True, color=\"red\")\n",
     "    \n",
-    "plotter.add_mesh(slicer.slices[\"exact\"], color=\"green\")\n",
+    "plotter.add_mesh(line, color=\"blue\", line_width=5)\n",
+    "    \n",
+    "#plotter.add_mesh(slicer.slices[\"exact\"], color=\"red\", line_width=1)\n",
+    "plotter.add_mesh(slicer.slices[\"west\"], color=\"orange\", line_width=1)\n",
+    "plotter.add_mesh(slicer.slices[\"east\"], color=\"green\", line_width=1)\n",
     "\n",
     "plotter.add_points(poi, color=\"blue\", render_points_as_spheres=True, point_size=10)\n",
     "plotter.show()"
@@ -385,31 +393,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1a2ded6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#umesh = load_lfric(data=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "28d7249e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "umesh.active_scalars_name = None\n",
     "umesh"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60ec81e9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "umesh.active_scalars_name = None"
    ]
   },
   {
@@ -439,7 +428,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plane = pv.Plane(center=(0.75, 0, 0), i_resolution=10, j_resolution=10, i_size=1.5, j_size=2.5, direction=(0, 1, 0))\n",
+    "plane = pv.Plane(center=(0.5, 0, 0), i_resolution=1, j_resolution=1, i_size=1.0, j_size=2.0, direction=(0, 1, 0))\n",
     "plane.rotate_z(meridian, inplace=True)"
    ]
   },
@@ -449,69 +438,6 @@
    "metadata": {},
    "source": [
     "Let's see what that looks like..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a99daf38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plotter = gv.GeoPlotter()\n",
-    "\n",
-    "plotter.add_mesh(plane, show_edges=True, opacity=0.5)\n",
-    "#plotter.add_mesh(umesh, cmap=\"balance\", show_edges=True)\n",
-    "\n",
-    "plotter.add_coastlines()\n",
-    "plotter.add_axes()\n",
-    "plotter.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6de49a20",
-   "metadata": {},
-   "source": [
-    "Ensure that the mesh is a `PolyData` and not an `UnstructuredGrid`..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4231e893",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mesh_split"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba63f852",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#mesh_split = cast(mesh_split)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "76d5954f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#mesh_split"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "30491f80",
-   "metadata": {},
-   "source": [
-    "Let's remind ourselves what the `mesh_split` mesh looks like..."
    ]
   },
   {
@@ -537,7 +463,7 @@
    "id": "9d9756d7",
    "metadata": {},
    "source": [
-    "Time to remesh..."
+    "Time to remesh over the chosen meridian..."
    ]
   },
   {
@@ -549,64 +475,9 @@
    "source": [
     "from geovista.filters import remesh, logger\n",
     "\n",
-    "logger.setLevel(\"INFO\")\n",
+    "logger.setLevel(\"DEBUG\")\n",
     "\n",
-    "triangulated, intersection, remeshed = remesh(mesh_split, plane)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ca11ede",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "triangulated.active_scalars_name = None\n",
-    "remeshed.active_scalars_name = None"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "280b8dec",
-   "metadata": {},
-   "source": [
-    "The **intersection** mesh contains various useful index information from the **vtkIntersectionPolyDataFilter**..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "646b8bb7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "intersection"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cb8082c9",
-   "metadata": {},
-   "source": [
-    "Let's see the **triangulated** input mesh passed to the **vtkIntersectionPolyDataFilter**..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb104e24",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plotter = gv.GeoPlotter()\n",
-    "\n",
-    "#plotter.add_mesh(plane, show_edges=True, opacity=0.5)\n",
-    "plotter.add_mesh(triangulated, show_edges=True)\n",
-    "\n",
-    "plotter.add_points(poles, color=\"blue\", render_points_as_spheres=True, point_size=10)\n",
-    "plotter.add_coastlines()\n",
-    "plotter.add_axes()\n",
-    "plotter.show()"
+    "remeshed, remeshed_west, remeshed_east = remesh(mesh_split, meridian)"
    ]
   },
   {
@@ -615,6 +486,37 @@
    "metadata": {},
    "source": [
     "Now let's see the resultant **remeshed** output from the **vtkIntersectionPolyDataFilter**..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec14b20c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remeshed.active_scalars_name = None\n",
+    "remeshed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75d9dcfa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remeshed_west"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "152b2e2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remeshed_east"
    ]
   },
   {
@@ -633,6 +535,24 @@
     "plotter.add_coastlines()\n",
     "plotter.add_axes()\n",
     "plotter.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bb660f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plotter = gv.GeoPlotter()\n",
+    "\n",
+    "#plotter.add_mesh(plane, show_edges=True, opacity=0.5)\n",
+    "plotter.add_mesh(remeshed_west, color=\"red\", show_edges=True)\n",
+    "plotter.add_mesh(remeshed_east, color=\"green\", show_edges=True)\n",
+    "#plotter.add_mesh(line, color=\"blue\", line_width=5)\n",
+    "plotter.add_coastlines()\n",
+    "\n",
+    "plotter.show()\n"
    ]
   },
   {
