docs: update tutorial

--- a/docs/src/tutorials/region-manifold-extraction.ipynb
+++ b/docs/src/tutorials/region-manifold-extraction.ipynb
@@ -243,7 +243,7 @@
     "---\n",
     "class: margin, dropdown, toggle-shown\n",
     "---\n",
-    "``plotter`` is a {py:class}`~geovista.geoplotter.GeoPlotter` instance. It inherits all the behaviour of a {py:class}`pyvista.Plotter` but also additional ✨ cartographic conveinences ✨ from {py:class}`~geovista.geoplotter.GeoPlotterBase`.\n",
+    "``plotter`` is a {py:class}`~geovista.geoplotter.GeoPlotter` instance. It inherits all the behaviour of a {py:class}`pyvista.Plotter` but also additional ✨ cartographic conveniences ✨ from {py:class}`~geovista.geoplotter.GeoPlotterBase`.\n",
     "```"
    ]
   },
@@ -370,9 +370,9 @@
    "id": "dab42368-7a84-4631-9c6e-c7097efb3564",
    "metadata": {},
    "source": [
-    "The extracted ``region`` returned by {py:meth}`~geovista.geodesic.BBox.enclosed` is a {py:class}`pyvista.PolyData`.\n",
+    "The extracted ``region`` returned by {py:meth}`~geovista.geodesic.BBox.enclosed` is a {py:class}`pyvista.PolyData`. Under the hood {py:meth}`~geovista.geodesic.BBox.enclosed` uses the {py:meth}`pyvista.DataSetFilters.select_enclosed_points` method to achieve this. \n",
     "\n",
-    "{fa}`flask` You may want to experiemnt with the ``preference`` *kwarg* of the {py:meth}`~geovista.geodesic.BBox.enclosed` method to see the impact on the end result.\n",
+    "{fa}`flask` You may want to experiment with the ``preference`` *kwarg* of the {py:meth}`~geovista.geodesic.BBox.enclosed` method to see the impact on the end result.\n",
     "\n",
     "Anyways, let's go ahead and see the extracted region, which should represent all the cells from the ``c48_sst`` mesh within the ``americas`` bounding-box:"
    ]
@@ -521,7 +521,7 @@
    "id": "c6d1c5af-c3d6-4694-a371-e955f0d92e01",
    "metadata": {},
    "source": [
-    "``geovista`` offers basic support for **Cylindrical** and **Pseudo-Cylindrical** cartographic projections. We're working on maturing this capabilty, and later extending to other classes of projections, such as **Azimuthal** and **Conic**.\n",
+    "``geovista`` offers basic support for **Cylindrical** and **Pseudo-Cylindrical** cartographic projections. We're working on maturing this capability, and later extending to other classes of projections, such as **Azimuthal** and **Conic**.\n",
     "\n",
     "To exercise this, let's transform our ``sea_region`` mesh to a [Robinson](https://proj.org/en/9.4/operations/projections/robin.html) projection using a [PROJ](https://proj.org/en/9.4/) string to define the Coordinate Reference System (CRS):"
    ]
@@ -581,7 +581,7 @@
    "id": "93bcfdc0-9474-4760-bda4-99e0682ef2af",
    "metadata": {},
    "source": [
-    "Note that, the base layer and coastlines are also automtically transformed to the target projection.\n",
+    "Note that, the base layer and coastlines are also automatically transformed to the target projection.\n",
     "\n",
     "``geovista`` also has an understanding of [cartopy](https://github.com/SciTools/cartopy) CRS's. So let's use ``cartopy`` to create a [Mollweide](https://proj.org/en/9.4/operations/projections/moll.html) CRS:"
    ]
