adopt plotter -> p standard

--- a/docs/src/tutorials/region-manifold-extraction.ipynb
+++ b/docs/src/tutorials/region-manifold-extraction.ipynb
@@ -262,15 +262,15 @@
    },
    "outputs": [],
    "source": [
-    "plotter = gv.GeoPlotter()\n",
+    "p = gv.GeoPlotter()\n",
     "\n",
-    "plotter.add_mesh(c48_sst, show_edges=True)\n",
-    "plotter.add_mesh(americas_bbox.mesh, color=\"orange\")\n",
+    "p.add_mesh(c48_sst, show_edges=True)\n",
+    "p.add_mesh(americas_bbox.mesh, color=\"orange\")\n",
     "\n",
-    "plotter.view_yz()\n",
-    "plotter.camera.zoom(1.2)\n",
-    "plotter.add_axes()\n",
-    "plotter.show()"
+    "p.view_yz()\n",
+    "p.camera.zoom(1.2)\n",
+    "p.add_axes()\n",
+    "p.show()"
    ]
   },
   {
@@ -300,15 +300,15 @@
    },
    "outputs": [],
    "source": [
-    "plotter = gv.GeoPlotter()\n",
-    "plotter.add_mesh(c48_sst, opacity=0.3)\n",
-    "plotter.add_mesh(americas_bbox.mesh, color=\"orange\")\n",
+    "p = gv.GeoPlotter()\n",
+    "p.add_mesh(c48_sst, opacity=0.3)\n",
+    "p.add_mesh(americas_bbox.mesh, color=\"orange\")\n",
     "\n",
-    "plotter.view_poi(x=30)\n",
+    "p.view_poi(x=30)\n",
     "\n",
-    "plotter.camera.zoom(1.2)\n",
-    "plotter.add_axes()\n",
-    "plotter.show()"
+    "p.camera.zoom(1.2)\n",
+    "p.add_axes()\n",
+    "p.show()"
    ]
   },
   {
@@ -336,15 +336,15 @@
    },
    "outputs": [],
    "source": [
-    "plotter = gv.GeoPlotter()\n",
-    "plotter.add_mesh(c48_sst, show_edges=True)\n",
+    "p = gv.GeoPlotter()\n",
+    "p.add_mesh(c48_sst, show_edges=True)\n",
     "\n",
-    "plotter.add_mesh(americas_bbox.boundary(), color=\"orange\", line_width=5)\n",
+    "p.add_mesh(americas_bbox.boundary(), color=\"orange\", line_width=5)\n",
     "\n",
-    "plotter.view_xz()\n",
-    "plotter.camera.zoom(1.2)\n",
-    "plotter.add_axes()\n",
-    "plotter.show()"
+    "p.view_xz()\n",
+    "p.camera.zoom(1.2)\n",
+    "p.add_axes()\n",
+    "p.show()"
    ]
   },
   {
@@ -392,13 +392,13 @@
    },
    "outputs": [],
    "source": [
-    "plotter = gv.GeoPlotter()\n",
+    "p = gv.GeoPlotter()\n",
     "\n",
-    "plotter.add_mesh(region, show_edges=True)\n",
+    "p.add_mesh(region, show_edges=True)\n",
     "\n",
-    "plotter.view_xz()\n",
-    "plotter.add_axes()\n",
-    "plotter.show()"
+    "p.view_xz()\n",
+    "p.add_axes()\n",
+    "p.show()"
    ]
   },
   {
@@ -433,16 +433,16 @@
    "source": [
     "clim = (271, 303)\n",
     "\n",
-    "plotter = gv.GeoPlotter()\n",
-    "plotter.add_mesh(region, show_edges=True, clim=clim)\n",
+    "p = gv.GeoPlotter()\n",
+    "p.add_mesh(region, show_edges=True, clim=clim)\n",
     "\n",
-    "plotter.add_base_layer(texture=gv.natural_earth_hypsometric())\n",
-    "plotter.add_coastlines(resolution=\"10m\")\n",
+    "p.add_base_layer(texture=gv.natural_earth_hypsometric())\n",
+    "p.add_coastlines(resolution=\"10m\")\n",
     "\n",
-    "plotter.view_xz()\n",
-    "plotter.camera.zoom(1.2)\n",
-    "plotter.show_axes()\n",
-    "plotter.show()"
+    "p.view_xz()\n",
+    "p.camera.zoom(1.2)\n",
+    "p.show_axes()\n",
+    "p.show()"
    ]
   },
   {
@@ -495,17 +495,17 @@
    },
    "outputs": [],
    "source": [
-    "plotter = gv.GeoPlotter()\n",
+    "p = gv.GeoPlotter()\n",
     "\n",
     "sargs = {\"title\": f\"{sea_region.active_scalars_name} / K\"}\n",
-    "plotter.add_mesh(sea_region, show_edges=True, clim=clim, scalar_bar_args=sargs)\n",
+    "p.add_mesh(sea_region, show_edges=True, clim=clim, scalar_bar_args=sargs)\n",
     "\n",
-    "plotter.add_base_layer(texture=gv.natural_earth_hypsometric())\n",
-    "plotter.add_coastlines(resolution=\"10m\")\n",
-    "plotter.view_xz()\n",
-    "plotter.camera.zoom(1.2)\n",
-    "plotter.show_axes()\n",
-    "plotter.show()"
+    "p.add_base_layer(texture=gv.natural_earth_hypsometric())\n",
+    "p.add_coastlines(resolution=\"10m\")\n",
+    "p.view_xz()\n",
+    "p.camera.zoom(1.2)\n",
+    "p.show_axes()\n",
+    "p.show()"
    ]
   },
   {
@@ -566,14 +566,14 @@
    },
    "outputs": [],
    "source": [
-    "plotter = gv.GeoPlotter(crs=crs)\n",
-    "plotter.add_mesh(sea_region, show_edges=True, clim=clim)\n",
-    "plotter.add_base_layer(texture=gv.natural_earth_hypsometric())\n",
-    "plotter.add_coastlines(resolution=\"10m\")\n",
-    "plotter.view_xy()\n",
-    "plotter.camera.zoom(1.5)\n",
-    "plotter.show_axes()\n",
-    "plotter.show()"
+    "p = gv.GeoPlotter(crs=crs)\n",
+    "p.add_mesh(sea_region, show_edges=True, clim=clim)\n",
+    "p.add_base_layer(texture=gv.natural_earth_hypsometric())\n",
+    "p.add_coastlines(resolution=\"10m\")\n",
+    "p.view_xy()\n",
+    "p.camera.zoom(1.5)\n",
+    "p.show_axes()\n",
+    "p.show()"
    ]
   },
   {
@@ -640,14 +640,14 @@
    },
    "outputs": [],
    "source": [
-    "plotter = gv.GeoPlotter(crs=crs)\n",
-    "plotter.add_mesh(sea_outside, show_edges=True, clim=clim)\n",
-    "plotter.add_base_layer(texture=gv.natural_earth_hypsometric())\n",
-    "plotter.add_coastlines(resolution=\"10m\")\n",
-    "plotter.view_xy()\n",
-    "plotter.camera.zoom(1.5)\n",
-    "plotter.show_axes()\n",
-    "plotter.show()"
+    "p = gv.GeoPlotter(crs=crs)\n",
+    "p.add_mesh(sea_outside, show_edges=True, clim=clim)\n",
+    "p.add_base_layer(texture=gv.natural_earth_hypsometric())\n",
+    "p.add_coastlines(resolution=\"10m\")\n",
+    "p.view_xy()\n",
+    "p.camera.zoom(1.5)\n",
+    "p.show_axes()\n",
+    "p.show()"
    ]
   },
   {
