enable nbqa pre-commit hook

--- a/docs/src/tutorials/region-manifold-extraction.ipynb
+++ b/docs/src/tutorials/region-manifold-extraction.ipynb
@@ -35,9 +35,12 @@
     "# i.e., \"tags\": [ \"remove-cell\" ]\n",
     "#\n",
     "\n",
+    "from __future__ import annotations\n",
+    "\n",
+    "import pyvista\n",
+    "\n",
     "import geovista.cache\n",
     "import geovista.theme\n",
-    "import pyvista\n",
     "\n",
     "# Tip: Change this to \"trame\" for an interactive backend.\n",
     "pyvista.set_jupyter_backend(\"static\")\n",
@@ -112,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbd25452-a737-45df-b38f-aa3cc027d843",
+   "id": "19c5fbb7-61fe-43c8-9e06-d61695455e2c",
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -697,7 +700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
