updated region manifold extraction tutorial

--- a/docs/src/tutorials/region-manifold-extraction.ipynb
+++ b/docs/src/tutorials/region-manifold-extraction.ipynb
@@ -50,6 +50,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "114bb0fc-28fa-4c5c-b7c2-b94aa309c8cc",
+   "metadata": {},
+   "source": [
+    "```{article-info}\n",
+    ":read-time: **Tutorial ~30 minute read**\n",
+    ":class-container: sd-p-2 sd-outline-muted sd-rounded-1\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6d33ad59-e40b-4cbd-b194-40607f6bb5aa",
    "metadata": {},
    "source": [
@@ -93,14 +104,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d67f3fd-4c13-4227-aa6b-d695331b593c",
-   "metadata": {},
-   "source": [
-    "First, let's import ``geovista`` and generate some **LFRic model** cubed-sphere sample data using the {py:func}`~geovista.pantry.meshes.lfric` and {py:func}`~geovista.pantry.meshes.lfric_sst` convenience functions:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "24d5a70d-4d39-4048-a5e1-8e538c190f49",
    "metadata": {},
    "source": [
@@ -108,8 +111,16 @@
     "---\n",
     "class: margin, dropdown, toggle-shown\n",
     "---\n",
-    "For those interested in LFRic, please refer to [LFRic - a modelling system fit for future computers](https://www.metoffice.gov.uk/research/approach/modelling-systems/lfric).\n",
+    "For further information refer to [LFRic - a modelling system fit for future computers](https://www.metoffice.gov.uk/research/approach/modelling-systems/lfric).\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d67f3fd-4c13-4227-aa6b-d695331b593c",
+   "metadata": {},
+   "source": [
+    "First, let's import ``geovista`` and generate some **LFRic model** cubed-sphere sample data using the {py:func}`~geovista.pantry.meshes.lfric` and {py:func}`~geovista.pantry.meshes.lfric_sst` convenience functions:"
    ]
   },
   {
@@ -185,11 +196,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "66766b50-7630-4038-b9b0-c8a467581fc0",
+   "metadata": {},
+   "source": [
+    "```{attention}\n",
+    "Our goal is to extract all cubed-sphere cells within the panel covering the Americas.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c4e9d436-0de6-4b4d-9bb8-c124793bec18",
    "metadata": {},
    "source": [
-    "{fa}`bullseye` **Our challenge is to extract all cubed-sphere cells within the panel covering the Americas.**\n",
-    "\n",
     "We can achieve this using the {py:func}`geovista.geodesic.panel` function.\n",
     "\n",
     "The {py:func}`~geovista.geodesic.panel` function is a convenience which allows you to extract cells from a mesh within **1 of the 6** named cubed-sphere panels i.e., ``africa``, ``americas``, ``antarctic``, ``arctic``, ``asia``, and ``pacific``.\n",
@@ -246,7 +265,7 @@
     "---\n",
     "class: margin, dropdown, toggle-shown\n",
     "---\n",
-    "``plotter`` is a {py:class}`~geovista.geoplotter.GeoPlotter` instance. It inherits all the behaviour of a {py:class}`pyvista.Plotter` but also additional ✨ cartographic conveniences ✨ from {py:class}`~geovista.geoplotter.GeoPlotterBase`.\n",
+    "``p`` is a {py:class}`~geovista.geoplotter.GeoPlotter` instance. It inherits all the behaviour of a {py:class}`pyvista.Plotter`, but also additional cartographic conveniences from our {py:class}`~geovista.geoplotter.GeoPlotterBase`.\n",
     "```"
    ]
   },
@@ -373,9 +392,9 @@
    "id": "dab42368-7a84-4631-9c6e-c7097efb3564",
    "metadata": {},
    "source": [
-    "The extracted ``region`` returned by {py:meth}`~geovista.geodesic.BBox.enclosed` is a {py:class}`pyvista.PolyData`. Under the hood {py:meth}`~geovista.geodesic.BBox.enclosed` uses the {py:meth}`pyvista.DataSetFilters.select_enclosed_points` method to achieve this. \n",
+    "[^mn1]The extracted ``region`` returned by {py:meth}`~geovista.geodesic.BBox.enclosed` is a {py:class}`pyvista.PolyData`. Under the hood {py:meth}`~geovista.geodesic.BBox.enclosed` uses the {py:meth}`pyvista.DataSetFilters.select_enclosed_points` method to achieve this. \n",
     "\n",
-    "{fa}`flask` You may want to experiment with the ``preference`` *kwarg* of the {py:meth}`~geovista.geodesic.BBox.enclosed` method to see the impact on the end result.\n",
+    "[^mn1]: {-} {fa}`flask` You may want to experiment with the ``preference`` *kwarg* of the {py:meth}`~geovista.geodesic.BBox.enclosed` method to see the impact on the end result.\n",
     "\n",
     "Anyways, let's go ahead and see the extracted region, which should represent all the cells from the ``c48_sst`` mesh within the ``americas`` bounding-box:"
    ]
@@ -413,7 +432,7 @@
     "---\n",
     "class: margin, dropdown, toggle-shown\n",
     "---\n",
-    "When you extract data from a mesh use the {py:meth}`pyvista.Plotter.add_mesh` ``clim`` *kwarg* to ensure the same colorbar range.\n",
+    "When you extract data from a mesh use the {py:meth}`~pyvista.Plotter.add_mesh` ``clim`` *kwarg* to ensure the **same** colorbar range.\n",
     "```\n",
     "\n",
     "Now bring this all together by rendering the extracted region along with a [Natural Earth](https://www.naturalearthdata.com/) texture mapped base layer and coastlines:"
@@ -457,7 +476,7 @@
     "---\n",
     "class: margin, dropdown, toggle-shown\n",
     "---\n",
-    "Discover the data arrays available on a mesh with {py:attr}`pyvista.DataSet.array_names` and the active scalars with {py:attr}`pyvista.DataSet.active_scalars_name`.\n",
+    "Discover the *data arrays* available on a mesh with {py:attr}`~pyvista.DataSet.array_names`, and the *active scalars* with {py:attr}`~pyvista.DataSet.active_scalars_name`.\n",
     "```\n",
     "\n",
     "As we're not particularly interested in the masked land masses, we can easily remove them using the {py:meth}`pyvista.DataSetFilters.threshold` method available on the ``region`` {py:class}`~pyvista.PolyData` instance.\n",
@@ -700,7 +719,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
