--- a/changelog/1039.dependency.rst
+++ b/changelog/1039.dependency.rst
@@ -1,2 +1,3 @@
 Introduced temporary maximum pin ``towncrier <24.7.0`` due to breaking change
-for ``sphinx-changelog``. (:user:`bjlittle`)
+for `sphinx-changelog <https://github.com/OpenAstronomy/sphinx-changelog>`__.
+(:user:`bjlittle`)
