--- a/changelog/1067.dependency.rst
+++ b/changelog/1067.dependency.rst
@@ -1,2 +1,2 @@
-Unpinned ``towncrier`` and introduced minimum pin ``sphinx-changelog>=1.6.0``.
-(:user:`bjlittle`)
+Unpinned `towncrier <https://github.com/twisted/towncrier>`__ and introduced
+minimum pin ``sphinx-changelog >=1.6.0``. (:user:`bjlittle`)
