fix PR #1064 news fragment

--- a/changelog/1064.internal.rst
+++ b/changelog/1064.internal.rst
@@ -1,2 +1,5 @@
-Dropping nbQA from pre-commit check.
-Ruff start to Lint and format Jupyter Notebook by default from `v0.6.0 <https://github.com/astral-sh/ruff/releases/tag/0.6.0>`__. (:user:`tkoyama010`)
+Dropped `nbQA <https://github.com/nbQA-dev/nbQA/tree/main>`__ ``pre-commit``
+hook, as `ruff <https://github.com/astral-sh/ruff>`__ lints and formats
+Jupyter notebooks by default from
+`v0.6.0 <https://github.com/astral-sh/ruff/releases/tag/0.6.0>`__.
+(:user:`tkoyama010`)
